Lagt til tester for AmtDeltakerClient